<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/red"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginStart="@dimen/_30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/red"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_165dp"
            android:layout_marginStart="@dimen/_165dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Chronometer
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timer"
            android:textColor="@color/red"
            android:textSize="@dimen/_20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_170dp"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_170dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20dp"
            android:textSize="@dimen/_20sp"
            android:text="00"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/moves"
            android:textColor="@color/red"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp">
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="1"
            android:id="@+id/one"
            android:background="@drawable/selector"
            android:contentDescription="@string/one"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_20dp"
            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="2"
            android:id="@+id/two"
            android:background="@drawable/selector"
            android:contentDescription="@string/two"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="3"
            android:id="@+id/three"
            android:background="@drawable/selector"
            android:contentDescription="@string/three"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp">
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="4"
            android:id="@+id/four"
            android:background="@drawable/selector"
            android:contentDescription="@string/four"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_20dp"

            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="5"
            android:id="@+id/five"
            android:background="@drawable/selector"
            android:contentDescription="@string/five"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="6"
            android:id="@+id/six"
            android:background="@drawable/selector"
            android:contentDescription="@string/six"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp">
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="7"
            android:id="@+id/seven"
            android:background="@drawable/selector"
            android:contentDescription="@string/seven"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_20dp"
            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text="8"
            android:id="@+id/eight"
            android:background="@drawable/selector"
            android:contentDescription="@string/eight"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
        <Button
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_70dp"
            android:text=""
            android:id="@+id/space"
            android:background="@drawable/selector"
            android:contentDescription="@string/blank"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="@dimen/_25sp"
            android:textColor="@color/green"
            android:id="@+id/play"
            android:background="@drawable/selector"
            android:contentDescription="@string/play"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="@dimen/_25sp"
            android:id="@+id/reset"
            android:background="@drawable/selector"
            android:contentDescription="@string/reset"
            android:textColor="@color/red"
            android:layout_marginLeft="@dimen/_130dp"
            android:layout_marginStart="@dimen/_130dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>